# syosetu

./: .gitignore  Cargo.toml  config.toml
output/110488/: metadata.toml
output/110488/chapters/: chapter_1.txt  chapter_10.txt  chapter_100.txt  chapter_101.txt  chapter_102.txt  chapter_103.txt  chapter_104.txt  chapter_105.txt  chapter_106.txt  chapter_107.txt  chapter_108.txt  chapter_109.txt  chapter_11.txt  chapter_110.txt  chapter_111.txt  chapter_112.txt  chapter_113.txt  chapter_114.txt  chapter_115.txt  chapter_116.txt  chapter_117.txt  chapter_118.txt  chapter_119.txt  chapter_12.txt  chapter_120.txt  chapter_121.txt  chapter_122.txt  chapter_123.txt  chapter_124.txt  chapter_125.txt  chapter_126.txt  chapter_127.txt  chapter_128.txt  chapter_129.txt  chapter_13.txt  chapter_130.txt  chapter_131.txt  chapter_132.txt  chapter_133.txt  chapter_134.txt  (+220 more)
scripts/: release.nu
src/: config.rs  lib.rs  main.rs  syosetu.rs  utils.rs
src/.github/workflows/: release.yml
src/syosetu/: chapter.rs  metadata.rs
