[package]
name = "syosetu"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
regex = "1"
scraper = "0.24"
config = "0.15"
lazy_static = "1.4"

[dependencies.reqwest]
version = "0.12"
features = [
    "json",
    "cookies",
]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "fs",
]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
